@@ -1,3 +1,8 @@
+Thu, Dec 25, 2008
+---------------------------------------------------------------------
+- Update campaign lead count and conversion ratio when creating a new lead.
+- Make sure :uuid gets reloaded from the database and not from cached attributes.
+
 Wed, Dec 24, 2008
 ---------------------------------------------------------------------
 - Created [uses_mysql_uuid] plugin.
